Refs #36366 -- Fixed page number layout in admin pagination on small screens.
Regression in 3f59711581bd22ebd0f13fb040b15b69c0eee21f.

--- a/django/contrib/admin/static/admin/css/base.css
+++ b/django/contrib/admin/static/admin/css/base.css
@@ -1161,7 +1161,6 @@ a.deletelink:focus, a.deletelink:hover {
     line-height: 22px;
     margin: 0;
     border-top: 1px solid var(--hairline-color);
-    width: 100%;
     box-sizing: border-box;
 }
 
